--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,10 @@ jobs:
            cd docs/source/
            sphinx-build . _build/html
            cd ../..
+
+    - name: Upload sphinx docs
+      if: matrix.os == 'macos-latest' && matrix.python-version == '3.8'
+      uses: actions/upload-artifact@v2
+      with:
+        name: docs
+        path: _build/html
