--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        os: [ubuntu-latest]
+        python-version: [3.8]
 
     steps:
     - name: Checkout
@@ -32,15 +32,15 @@ jobs:
     - name: Install ipygany
       run: pip install -e .
 
-    - name: Install labextension (Only on Ubuntu for build speed)
-      if: matrix.os == 'ubuntu-latest'
-      run: jupyter labextension install .
+#    - name: Install labextension (Only on Ubuntu for build speed)
+#      if: matrix.os == 'ubuntu-latest'
+#      run: jupyter labextension install .
 
     - name: Run Python tests
       run: pytest tests
 
     - name: Build docs (Only on MacOS for build speed)
-      if: matrix.os == 'macos-latest'
+      if: matrix.os == 'ubuntu-latest'
       run: |
            conda install sphinx sphinx_rtd_theme pygments==2.6.1 jupyter-sphinx meshpy pyvista
            cd docs/source/
@@ -48,7 +48,7 @@ jobs:
            cd ../..
 
     - name: Upload sphinx docs
-      if: matrix.os == 'macos-latest' && matrix.python-version == '3.8'
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
       uses: actions/upload-artifact@v2
       with:
         name: docs
